2006-01-22  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=5731
          Form element as display table-cell hangs Safari (will eventually crash)

        * fast/table/form-with-table-style.html: Added.
        * fast/table/form-with-table-style-expected.txt: Added.
        * fast/table/form-with-table-style-expected.png: Added.
        * fast/table/form-with-table-style-expected.checksum: Added.

2006-01-22  David Kilzer  <ddkilzer@kilzer.net>

        Reviewed by Maciej.

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=5656
        REGRESSION: Buttons on Yahoo! Mail misplaced in ToT
        <rdar://problem/4404335>
        Tests whether white-space mode on buttons is inherited and not forced.

        * fast/forms/button-white-space-expected.checksum: Added.
        * fast/forms/button-white-space-expected.png: Added.
        * fast/forms/button-white-space-expected.txt: Added.
        * fast/forms/button-white-space.html: Added.

2006-01-22  Eric Seidel  <eseidel@apple.com>

        Reviewed by darin.

        SVG needs to support "evt" instead of "event" in event handlers.
        http://bugzilla.opendarwin.org/show_bug.cgi?id=5874

        * svg/custom/evt-onload-expected.checksum: Added.
        * svg/custom/evt-onload-expected.png: Added.
        * svg/custom/evt-onload-expected.txt: Added.
        * svg/custom/evt-onload.svg: Added.

2006-01-22  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - tests for http://bugzilla.opendarwin.org/show_bug.cgi?id=3508
          REGRESSION (125-412): problem with negative margin-top and position: absolute (vre.aitg.com)

        * fast/css/position-negative-top-margin.html: Added.
        * fast/css/position-negative-top-margin-expected.txt: Added.
        * fast/css/position-negative-top-margin-expected.png: Added.
        * fast/css/position-negative-top-margin-expected.checksum: Added.
